--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -1,13 +1,13 @@
-accounts.msg = Welcome to the Eazybank Loans Dev Application
-accounts.build-version=2
+loans.msg = Welcome to the Eazybank Loans Dev Application
+loans.build-version=2
 
-accounts.mailDetails.hostName=dev-loans@eazybytes.com
-accounts.mailDetails.port=8091
-accounts.mailDetails.from=dev-loans@eazybytes.com
-accounts.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
+loans.mailDetails.hostName=dev-loans@eazybytes.com
+loans.mailDetails.port=8091
+loans.mailDetails.from=dev-loans@eazybytes.com
+loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
 
-accounts.activeBranches[0] =New York
-accounts.activeBranches[1] =Toronto
-accounts.activeBranches[2] =Ottawa
+loans.activeBranches[0] =New York
+loans.activeBranches[1] =Toronto
+loans.activeBranches[2] =Ottawa
 
 
