--- a/loans.properties
+++ b/loans.properties
@@ -1,13 +1,13 @@
-accounts.msg = Welcome to the Eazybank Loans Default Application
-accounts.build-version=3
+loans.msg = Welcome to the Eazybank Loans Default Application
+loans.build-version=3
 
-accounts.mailDetails.hostName=default-loans@eazybytes.com
-accounts.mailDetails.port=8090
-accounts.mailDetails.from=default-loans@eazybytes.com
-accounts.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
+loans.mailDetails.hostName=default-loans@eazybytes.com
+loans.mailDetails.port=8090
+loans.mailDetails.from=default-loans@eazybytes.com
+loans.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
 
-accounts.activeBranches[0] =Chennai
-accounts.activeBranches[1] =Berlin
-accounts.activeBranches[2] =Indianapolis
+loans.activeBranches[0] =Chennai
+loans.activeBranches[1] =Berlin
+loans.activeBranches[2] =Indianapolis
 
 
