--- a/cards.properties
+++ b/cards.properties
@@ -1,13 +1,13 @@
-accounts.msg = Welcome to the Eazybank Cards Default Application
-accounts.build-version=3
+cards.msg = Welcome to the Eazybank Cards Default Application
+cards.build-version=3
 
-accounts.mailDetails.hostName=default-cards@eazybytes.com
-accounts.mailDetails.port=9050
-accounts.mailDetails.from=default-cards@eazybytes.com
-accounts.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
+cards.mailDetails.hostName=default-cards@eazybytes.com
+cards.mailDetails.port=9050
+cards.mailDetails.from=default-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
 
-accounts.activeBranches[0] =Montreal
-accounts.activeBranches[1] =Quebec
-accounts.activeBranches[2] =New Brunswick
+cards.activeBranches[0] =Montreal
+cards.activeBranches[1] =Quebec
+cards.activeBranches[2] =New Brunswick
 
 
