--- a/cards-dev.properties
+++ b/cards-dev.properties
@@ -1,13 +1,13 @@
-accounts.msg = Welcome to the Eazybank Cards Dev Application
-accounts.build-version=2
+cards.msg = Welcome to the Eazybank Cards Dev Application
+cards.build-version=2
 
-accounts.mailDetails.hostName=dev-cards@eazybytes.com
-accounts.mailDetails.port=9051
-accounts.mailDetails.from=dev-cards@eazybytes.com
-accounts.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
+cards.mailDetails.hostName=dev-cards@eazybytes.com
+cards.mailDetails.port=9051
+cards.mailDetails.from=dev-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
 
-accounts.activeBranches[0] =Australia
-accounts.activeBranches[1] =London
-accounts.activeBranches[2] =South Hampton
+cards.activeBranches[0] =Australia
+cards.activeBranches[1] =London
+cards.activeBranches[2] =South Hampton
 
 
