--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -1,13 +1,13 @@
-accounts.msg = Welcome to the Eazybank Cards Prod Application
-accounts.build-version=1
+cards.msg = Welcome to the Eazybank Cards Prod Application
+cards.build-version=1
 
-accounts.mailDetails.hostName=prod-cards@eazybytes.com
-accounts.mailDetails.port=9052
-accounts.mailDetails.from=prod-cards@eazybytes.com
-accounts.mailDetails.subject=Your Card Details from Eazy Bank Prod Environment
+cards.mailDetails.hostName=prod-cards@eazybytes.com
+cards.mailDetails.port=9052
+cards.mailDetails.from=prod-cards@eazybytes.com
+cards.mailDetails.subject=Your Card Details from Eazy Bank Prod Environment
 
-accounts.activeBranches[0] =Australia
-accounts.activeBranches[1] =London
-accounts.activeBranches[2] =South Hampton
+cards.activeBranches[0] =Australia
+cards.activeBranches[1] =London
+cards.activeBranches[2] =South Hampton
 
 
