--- a/fixedDeposit-dev.properties
+++ b/fixedDeposit-dev.properties
@@ -1,3 +1,3 @@
-fixedDeposit.msg=dev
-fixedDeposit.branch=US
-fixedDeposit.date=2023-01-01
+fixeddeposit.msg=dev
+fixeddeposit.branch=US
+fixeddeposit.date=2023-01-01
