--- a/deposits-dev.properties
+++ b/deposits-dev.properties
@@ -1,10 +1,10 @@
-cards.msg = Welcome to the Eazybank Cards Dev Application
+cards.msg = Welcome to the Eazybank Deposits Dev Application
 cards.build-version=2
 
-cards.mailDetails.hostName=dev-cards@eazybytes.com
+cards.mailDetails.hostName=dev-deposits@eazybytes.com
 cards.mailDetails.port=9051
-cards.mailDetails.from=dev-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
+cards.mailDetails.from=dev-deposits@eazybytes.com
+cards.mailDetails.subject=Your Deposits Details from Eazy Bank Dev Environment
 
 cards.activeBranches[0] =Australia
 cards.activeBranches[1] =London
