--- a/deposits.properties
+++ b/deposits.properties
@@ -1,11 +1,11 @@
-cards.msg = Welcome to the Eazybank Deposits default Application
-cards.build-version=2
+deposits.msg = Welcome to the Eazybank Deposits default Application
+deposits.build-version=2
 
-cards.mailDetails.hostName=default-deposits@eazybytes.com
-cards.mailDetails.port=9051
-cards.mailDetails.from=default-deposits@eazybytes.com
-cards.mailDetails.subject=Your Deposits Details from Eazy Bank Default Environment
+deposits.mailDetails.hostName=default-deposits@eazybytes.com
+deposits.mailDetails.port=9051
+deposits.mailDetails.from=default-deposits@eazybytes.com
+deposits.mailDetails.subject=Your Deposits Details from Eazy Bank Default Environment
 
-cards.activeBranches[0] =Australia
-cards.activeBranches[1] =London
-cards.activeBranches[2] =South Hampton
+deposits.activeBranches[0] =Australia
+deposits.activeBranches[1] =London
+deposits.activeBranches[2] =South Hampton
