--- a/deposits-dev.properties
+++ b/deposits-dev.properties
@@ -1,11 +1,11 @@
-cards.msg = Welcome to the Eazybank Deposits Dev Application
-cards.build-version=2
+deposits.msg = Welcome to the Eazybank Deposits Dev Application
+deposits.build-version=2
 
-cards.mailDetails.hostName=dev-deposits@eazybytes.com
-cards.mailDetails.port=9051
-cards.mailDetails.from=dev-deposits@eazybytes.com
-cards.mailDetails.subject=Your Deposits Details from Eazy Bank Dev Environment
+deposits.mailDetails.hostName=dev-deposits@eazybytes.com
+deposits.mailDetails.port=9051
+deposits.mailDetails.from=dev-deposits@eazybytes.com
+deposits.mailDetails.subject=Your Deposits Details from Eazy Bank Dev Environment
 
-cards.activeBranches[0] =Australia
-cards.activeBranches[1] =London
-cards.activeBranches[2] =South Hampton
+deposits.activeBranches[0] =Australia
+deposits.activeBranches[1] =London
+deposits.activeBranches[2] =South Hampton
